--- a/tests/AutoLazer.Core.Tests/AutoLazer.Core.Tests.csproj
+++ b/tests/AutoLazer.Core.Tests/AutoLazer.Core.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\AutoLazer.Core\AutoLazer.Core.csproj" />
+  </ItemGroup>
+
 </Project>
