Copy Test Files to the out dir

--- a/tests/AutoLazer.Core.Tests/AutoLazer.Core.Tests.csproj
+++ b/tests/AutoLazer.Core.Tests/AutoLazer.Core.Tests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\src\AutoLazer.Core\AutoLazer.Core.csproj" />
   </ItemGroup>
 
+<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <None Update="./TestFiles/*.txt" CopyToOutputDirectory="PreserveNewest" />
+</ItemGroup>
+
 </Project>
